3/3.02/A/manifests/deployment-app-0-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-0-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-0-db
  template:
    metadata:
      labels:
        app: app-0-db
    spec:
      containers:
        - name: app-0-db
          image: jylhakos/app-0-db:3.0.6
